[package]
name = "madness-battlegrounds"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13.0"
# bevy_flycam = "0.13.0"
bevy-inspector-egui = "0.24.0"
bevy_sprite3d = "2.8.0"
pathfinding = "4.3.0"
futures-lite = "*"
num = "*"
oxidized_navigation = { git = "https://github.com/TheGrimsey/oxidized_navigation.git", features = ["rapier"] }
bevy_rapier3d = "0.25.0"
bevy_gltf_collider = { git = "https://github.com/Defernus/bevy_gltf_collider.git"}